--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 *.cmd text eol=crlf
 <large-file> filter=lfs diff=lfs merge=lfs -text
 *.jar filter=lfs diff=lfs merge=lfs -text
+*.psd filter=lfs diff=lfs merge=lfs -text
